# uvl2dimacs

./: CMakeLists.txt  LICENSE  Makefile  README.md
api/examples/: batch_convert.cc  simple_convert.cc  tseitin_convert.cc
api/include/uvl2dimacs/: UVL2Dimacs.hh
api/src/: UVL2Dimacs.cc
backbone_solver/docs/: Doxyfile  backbone_overview.md
backbone_solver/src/: Makefile
backbone_solver/src/api/: BackboneSolverAPI.cc  BackboneSolverAPI.d  BackboneSolverAPI.hh  api_example.cc
backbone_solver/src/cli/: main.cc  main.d
backbone_solver/src/data_structures/: LiteralSet.cc  LiteralSet.d  LiteralSet.hh
backbone_solver/src/detectors/: BackBone.hh  CheckCandidatesOneByOne.cc  CheckCandidatesOneByOne.d  CheckCandidatesOneByOne.hh  CheckCandidatesOneByOneWithoutAttention.cc  CheckCandidatesOneByOneWithoutAttention.d  CheckCandidatesOneByOneWithoutAttention.hh
backbone_solver/src/io/: DIMACSReader.cc  DIMACSReader.d  DIMACSReader.hh  parse_utils.hh
backbone_solver/src/minisat_interface/: MiniSatExt.hh  minisat_aux.cc  minisat_aux.d  minisat_aux.hh
cli/: uvl2dimacs.cc
docs/: Doxyfile  footer.html  translation.md  uvl2dimacs_overview.md
docs/html/: ASTNode_8cc.html  ASTNode_8cc_source.html  ASTNode_8hh.html  ASTNode_8hh.js  ASTNode_8hh_source.html  BackboneSimplifier_8cc.html  BackboneSimplifier_8cc_source.html  BackboneSimplifier_8hh.html  BackboneSimplifier_8hh.js  BackboneSimplifier_8hh_source.html  CNFMode_8hh.html  CNFMode_8hh.js  CNFMode_8hh_source.html  CNFModel_8cc.html  CNFModel_8cc_source.html  CNFModel_8hh.html  CNFModel_8hh.js  CNFModel_8hh_source.html  Constraint_8cc.html  Constraint_8cc_source.html  Constraint_8hh.html  Constraint_8hh.js  Constraint_8hh_source.html  DimacsWriter_8cc.html  DimacsWriter_8cc_source.html  DimacsWriter_8hh.html  DimacsWriter_8hh.js  DimacsWriter_8hh_source.html  FMToCNF_8cc.html  FMToCNF_8cc_source.html  FMToCNF_8hh.html  FMToCNF_8hh.js  FMToCNF_8hh_source.html  FeatureModelBuilder_8cc.html  FeatureModelBuilder_8cc_source.html  FeatureModelBuilder_8hh.html  FeatureModelBuilder_8hh.js  FeatureModelBuilder_8hh_source.html  FeatureModel_8cc.html  FeatureModel_8cc_source.html  (+1745 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  (+59 more)
generator/include/: ASTNode.hh  BackboneSimplifier.hh  CNFMode.hh  CNFModel.hh  Constraint.hh  DimacsWriter.hh  FMToCNF.hh  Feature.hh  FeatureModel.hh  FeatureModelBuilder.hh  Relation.hh  RelationEncoder.hh
generator/src/: ASTNode.cc  BackboneSimplifier.cc  CNFModel.cc  Constraint.cc  DimacsWriter.cc  FMToCNF.cc  Feature.cc  FeatureModel.cc  FeatureModelBuilder.cc  Relation.cc  RelationEncoder.cc
parser/: CMakeLists.txt
parser/include/: UVLCppLexer.h  UVLCppParser.h  UVLCppParserBaseListener.h  UVLCppParserListener.h
parser/src/: UVLCppLexer.cpp  UVLCppLexer.interp  UVLCppLexer.tokens  UVLCppParser.cpp  UVLCppParser.interp  UVLCppParserBaseListener.cpp  UVLCppParserListener.cpp
tests/: download_additional_models.py  download_and_convert.py
tests/backbone/: test_backbone.sh
tests/backbone/sharpsat-td/: CMakeLists.txt
tests/straightforward/: test_straightforward.sh
tests/straightforward/dimacs/: 2007-05-20_17-12-43.dimacs  2007-06-01_14-40-03.dimacs  2007-07-01_14-53-06.dimacs  2007-08-01_23-30-54.dimacs  2007-09-02_14-51-54.dimacs  2007-10-01_09-59-01.dimacs  2007-11-02_23-31-10.dimacs  2007-12-02_01-43-18.dimacs  2008-01-02_19-55-04.dimacs  2008-02-01_01-41-57.dimacs  2008-03-01_09-35-39.dimacs  2008-04-01_14-47-57.dimacs  2008-05-02_09-19-29.dimacs  2008-06-01_10-10-22.dimacs  2008-07-01_01-57-36.dimacs  2008-08-01_02-15-05.dimacs  2008-09-01_15-23-04.dimacs  2008-10-02_13-30-31.dimacs  2008-11-01_00-10-51.dimacs  2008-12-01_12-36-41.dimacs  2009-02-01_00-40-45.dimacs  2009-03-01_04-50-18.dimacs  2009-04-01_11-24-04.dimacs  2009-05-01_03-00-04.dimacs  2009-06-01_11-26-30.dimacs  2009-07-02_12-04-50.dimacs  2009-08-01_06-53-03_048.dimacs  2009-09-02_11-49-25.dimacs  2009-10-02_01-10-32.dimacs  2009-11-01_04-01-30.dimacs  2009-12-01_02-32-01.dimacs  2010-01-01_16-45-43.dimacs  2010-02-01_04-55-30.dimacs  2010-03-02_15-02-45.dimacs  2010-04-01_15-09-44.dimacs  2017-05-22.dimacs  2017-09-28_179.dimacs  2017-10-20.dimacs  2017-11-20.dimacs  2017-12-22.dimacs  (+1409 more)
tests/straightforward/uvl/: 2007-05-20_17-12-43.uvl  2007-06-01_14-40-03.uvl  2007-07-01_14-53-06.uvl  2007-08-01_23-30-54.uvl  2007-09-02_14-51-54.uvl  2007-10-01_09-59-01.uvl  2007-11-02_23-31-10.uvl  2007-12-02_01-43-18.uvl  2008-01-02_19-55-04.uvl  2008-02-01_01-41-57.uvl  2008-03-01_09-35-39.uvl  2008-04-01_14-47-57.uvl  2008-05-02_09-19-29.uvl  2008-06-01_10-10-22.uvl  2008-07-01_01-57-36.uvl  2008-08-01_02-15-05.uvl  2008-09-01_15-23-04.uvl  2008-10-02_13-30-31.uvl  2008-11-01_00-10-51.uvl  2009-01-01_17-52-09.uvl  2009-02-01_00-40-45.uvl  2009-03-01_04-50-18.uvl  2009-04-01_11-24-04.uvl  2009-05-01_03-00-04.uvl  2009-06-01_11-26-30.uvl  2009-07-02_12-04-50.uvl  2009-08-01_06-53-03.uvl  2009-09-02_11-49-25.uvl  2009-10-02_01-10-32.uvl  2009-11-01_04-01-30.uvl  2009-12-01_02-32-01.uvl  2010-01-01_16-45-43.uvl  2010-02-01_04-55-30.uvl  2010-03-02_15-02-45.uvl  2010-04-01_15-09-44.uvl  2010-05-02_14-17-07.uvl  2017-05-22.uvl  2017-09-28.uvl  2017-10-20.uvl  2017-11-20.uvl  (+1436 more)
tests/tseitin/: test_tseitin.sh
tests/tseitin/dimacs/: 2007-05-20_17-12-43.dimacs  2007-08-01_23-30-54.dimacs  2008-01-02_19-55-04.dimacs  2008-02-01_01-41-57.dimacs  2008-07-01_01-57-36.dimacs  2008-08-01_02-15-05.dimacs  2009-02-01_00-40-45.dimacs  2009-03-01_04-50-18.dimacs  2009-08-01_06-53-03_048.dimacs  2009-11-01_04-01-30.dimacs  2010-02-01_04-55-30.dimacs  2010-05-02_14-17-07_167.dimacs  2017-09-28_179.dimacs  (+274 more)
(+1 files in other folders)
